# Mulimedia-Search

./: AVLTree.h  CMakeLists.txt  Make  Media.cpp  Media.h  README.md  Zoom Link  comments.md  main.cpp
Data/: books_genres.txt  books_genres_spec.txt  books_p3.csv  books_p3.txt  movie_genres.txt  podcast_genres.txt  podcasts_genres.txt
Media Types/: media-types-comments.md
Media Types/Header/: Book.h  Books.h  Movie.h  Movies.h  Podcast.h  Podcasts.h  header-comments.md
Media Types/Src/: Book.cpp  Books.cpp  Movie.cpp  Movies.cpp  Podcast.cpp  Podcasts.cpp  src-comments.md
OutFiles/: outfiles-comments.md
data/: books_p3.csv  data-comments  data-comments.md
src/: Book.cpp  Book.h  Books.cpp  Books.h  Movie.cpp  Movie.h  Movies.cpp  Movies.h  Podcast.cpp  Podcast.h  Podcasts.cpp  Podcasts.h  main.cpp  src-files-comments.md  srcfiles
